# streamlit_deploy

./: main.py  pyproject.toml  sns.yaml
.streamlit/: config.toml
