[tool.poetry]
name = "streamlit-deploy"
version = "0.1.0"
description = ""
authors = ["eunv0110 <eunvv0110@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.1"
langchain-openai = "^0.3.17"
dotenv = "^0.9.9"
langchain = "^0.3.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
